Added base outline for works page

--- a/views/index.html
+++ b/views/index.html
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="file:///C:/Users/Sadlungs/Desktop/Projects/Portfolio/views/work.html">Work</a>
+                    <a class="nav-link" href="work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
