Added links and images for works page

--- a/views/work.html
+++ b/views/work.html
@@ -74,7 +74,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <h2>Blobber Royal</h2>
-                <img id="blobber-royal-img" class="work-page-img" src="../styles/images/pup-1.png"
+                <img id="blobber-royal-img" class="work-page-img" src="../styles/images/blobber-royal-img.jpg"
                     alt="Image of Blobber Royal">
                 <div class="text-center mt-3">
                     <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
@@ -96,13 +96,15 @@
     <div class="container mt-5">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Blobber Royal</h2>
-                <img id="blobber-royal-img" class="work-page-img" src="../styles/images/pup-1.png"
-                    alt="Image of Blobber Royal">
+                <h2>Food for Thought</h2>
+                <img id="fft-img" class="work-page-img" src="../styles/images/fft-img.png"
+                    alt="Image of Food for Thought">
                 <div class="text-center mt-3">
-                    <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
+                    <a href="https://hunterwiegand.github.io/Food-for-Thought/"><button
+                            class="px-2 mx-3">Demo</button></a>
                     <a href="#"><button class="px-2 mx-3">Read More</button></a>
-                    <a href="https://github.com/yomyyo/yelling-game"><button class="px-2 mx-3">Source</button></i></a>
+                    <a href="https://github.com/hunterwiegand/Food-for-Thought"><button
+                            class="px-2 mx-3">Source</button></i></a>
                 </div>
             </div>
         </div>
@@ -119,13 +121,14 @@
     <div class="container mt-5">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Blobber Royal</h2>
-                <img id="blobber-royal-img" class="work-page-img" src="../styles/images/pup-1.png"
+                <h2>Mystic Spells</h2>
+                <img id="mystic-spell-img" class="work-page-img" src="../styles/images/mystic-spell-img.png"
                     alt="Image of Blobber Royal">
                 <div class="text-center mt-3">
-                    <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
+                    <a href="https://hunterwiegand.github.io/Psychic-Game/"><button class="px-2 mx-3">Demo</button></a>
                     <a href="#"><button class="px-2 mx-3">Read More</button></a>
-                    <a href="https://github.com/yomyyo/yelling-game"><button class="px-2 mx-3">Source</button></i></a>
+                    <a href="https://github.com/hunterwiegand/Psychic-Game"><button
+                            class="px-2 mx-3">Source</button></i></a>
                 </div>
             </div>
         </div>
@@ -142,13 +145,13 @@
     <div class="container mt-5">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Blobber Royal</h2>
-                <img id="blobber-royal-img" class="work-page-img" src="../styles/images/pup-1.png"
+                <h2>Node Siri</h2>
+                <img id="node-siri-img" class="work-page-img" src="../styles/images/node-siri-img.gif"
                     alt="Image of Blobber Royal">
                 <div class="text-center mt-3">
-                    <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
                     <a href="#"><button class="px-2 mx-3">Read More</button></a>
-                    <a href="https://github.com/yomyyo/yelling-game"><button class="px-2 mx-3">Source</button></i></a>
+                    <a href="https://github.com/hunterwiegand/liri-node-app"><button
+                            class="px-2 mx-3">Source</button></i></a>
                 </div>
             </div>
         </div>
@@ -165,13 +168,14 @@
     <div class="container mt-5">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Blobber Royal</h2>
-                <img id="blobber-royal-img" class="work-page-img" src="../styles/images/pup-1.png"
-                    alt="Image of Blobber Royal">
+                <h2>Gif generator</h2>
+                <img id="giffy-img" class="work-page-img" src="../styles/images/giffy-img.png"
+                    alt="Image of Food for Thought">
                 <div class="text-center mt-3">
-                    <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
+                    <a href="https://hunterwiegand.github.io/Giphy-App/"><button class="px-2 mx-3">Demo</button></a>
                     <a href="#"><button class="px-2 mx-3">Read More</button></a>
-                    <a href="https://github.com/yomyyo/yelling-game"><button class="px-2 mx-3">Source</button></i></a>
+                    <a href="https://github.com/hunterwiegand/Giphy-App"><button
+                            class="px-2 mx-3">Source</button></i></a>
                 </div>
             </div>
         </div>
