--- a/views/work.html
+++ b/views/work.html
@@ -25,7 +25,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="../index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Work</a>
