added images and temp change to background

--- a/views/work.html
+++ b/views/work.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand px-5 pb-5 pt-2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img id="logo" src="../styles/images/pup-1.png" alt="logo"></a>
+                    <a class="nav-link" href="#"><img id="logo" src="../styles/images/lung-icon-excited.png" alt="logo"></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -180,6 +180,25 @@
             </div>
         </div>
     </div>
+
+
+
+
+    <div id="content">
+        <p>This is the content-container</p>
+        <a href="#modal1">Open first modal</a><br>
+        <a href="#modal2">Open second modal</a>
+        <div id="modal1"><a href="#">Close</a>This is the first modal</div>
+        <div id="modal2"><a href="#">Close</a>This is the second modal</div>
+    </div>
+
+
+
+
+
+
+
+
     <footer class="page-footer font-small cyan darken-3">
         <div class="container">
             <div class="row">
@@ -197,6 +216,13 @@
             </div>
         </div>
     </footer>
+
+
+
+
+
+
+
 
 
 
