--- a/views/work.html
+++ b/views/work.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 text-center">
-                <img id="about-logo" src="../styles/images/pup-1.png" alt="logo">
+                <img id="about-logo" src="../styles/images/lung-icon-excited.png" alt="logo">
                 <h3 class="py-2">What I've been building</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut in eligendi, sit
                     at nam vel itaque omnis animi doloribus reiciendis fugit modi et magni temporibus officia! Lorem
@@ -70,7 +70,8 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+    <!-- Project 1 -->
+    <div class="container mt-5 color-pink">
         <div class="row text-center">
             <div class="col-md-12">
                 <h2>Blobber Royal</h2>
@@ -78,11 +79,12 @@
                     alt="Image of Blobber Royal">
                 <div class="text-center mt-3">
                     <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button class="px-2 mx-3">Read More</button></a>
+                    <a href="#"><button id="blobber-readme" class="px-2 mx-3 read-more">Read More</button></a>
                     <a href="https://github.com/yomyyo/yelling-game"><button class="px-2 mx-3">Source</button></i></a>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <div class="breaker">
         <div class="container">
@@ -93,7 +95,8 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+     <!-- Project 2 -->
+    <div class="container mt-5 color-blue-dark">
         <div class="row text-center">
             <div class="col-md-12">
                 <h2>Food for Thought</h2>
@@ -102,7 +105,7 @@
                 <div class="text-center mt-3">
                     <a href="https://hunterwiegand.github.io/Food-for-Thought/"><button
                             class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button class="px-2 mx-3">Read More</button></a>
+                    <a href="#"><button id="fft-readme" class="px-2 mx-3 read-more">Read More</button></a>
                     <a href="https://github.com/hunterwiegand/Food-for-Thought"><button
                             class="px-2 mx-3">Source</button></i></a>
                 </div>
@@ -118,7 +121,8 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+     <!-- Project 3 -->
+    <div class="container mt-5 color-red">
         <div class="row text-center">
             <div class="col-md-12">
                 <h2>Mystic Spells</h2>
@@ -126,7 +130,7 @@
                     alt="Image of Blobber Royal">
                 <div class="text-center mt-3">
                     <a href="https://hunterwiegand.github.io/Psychic-Game/"><button class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button class="px-2 mx-3">Read More</button></a>
+                    <a href="#"><button id="mystic-spells-readme" class="px-2 mx-3 read-more">Read More</button></a>
                     <a href="https://github.com/hunterwiegand/Psychic-Game"><button
                             class="px-2 mx-3">Source</button></i></a>
                 </div>
@@ -142,14 +146,15 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+     <!-- Project 4 -->
+    <div class="container mt-5 color-blue-light">
         <div class="row text-center">
             <div class="col-md-12">
                 <h2>Node Siri</h2>
                 <img id="node-siri-img" class="work-page-img" src="../styles/images/node-siri-img.gif"
                     alt="Image of Blobber Royal">
                 <div class="text-center mt-3">
-                    <a href="#"><button class="px-2 mx-3">Read More</button></a>
+                    <a href="#"><button id="node-siri-readme" class="px-2 mx-3 read-more">Read More</button></a>
                     <a href="https://github.com/hunterwiegand/liri-node-app"><button
                             class="px-2 mx-3">Source</button></i></a>
                 </div>
@@ -165,7 +170,8 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+     <!-- Project 5 -->
+    <div class="container mt-5 color-tan">
         <div class="row text-center">
             <div class="col-md-12">
                 <h2>Gif generator</h2>
@@ -173,7 +179,7 @@
                     alt="Image of Food for Thought">
                 <div class="text-center mt-3">
                     <a href="https://hunterwiegand.github.io/Giphy-App/"><button class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button class="px-2 mx-3">Read More</button></a>
+                    <a href="#"><button id="giffy-readme" class="px-2 mx-3 read-more">Read More</button></a>
                     <a href="https://github.com/hunterwiegand/Giphy-App"><button
                             class="px-2 mx-3">Source</button></i></a>
                 </div>
@@ -184,13 +190,7 @@
 
 
 
-    <div id="content">
-        <p>This is the content-container</p>
-        <a href="#modal1">Open first modal</a><br>
-        <a href="#modal2">Open second modal</a>
-        <div id="modal1"><a href="#">Close</a>This is the first modal</div>
-        <div id="modal2"><a href="#">Close</a>This is the second modal</div>
-    </div>
+   
 
 
 
