--- a/views/work.html
+++ b/views/work.html
@@ -20,7 +20,8 @@
         <nav class="navbar navbar-expand px-5 pb-5 pt-2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img id="logo" src="../styles/images/lung-icon-excited.png" alt="logo"></a>
+                    <a class="nav-link" href="#"><img id="logo" src="../styles/images/lung-icon-excited.png"
+                            alt="logo"></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -36,7 +37,7 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
+    <div class="container mx-0">
         <div class="row text-center pt-5">
             <div class="col-md-12">
                 <p>Projects</p>
@@ -46,22 +47,31 @@
     <div class="container" id="test">
         <!--Add background img here-->
     </div>
-    <div class="container">
+    <div class="container color-blue-light">
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 text-center">
-                <img id="about-logo" src="../styles/images/lung-icon-excited.png" alt="logo">
-                <h3 class="py-2">What I've been building</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut in eligendi, sit
-                    at nam vel itaque omnis animi doloribus reiciendis fugit modi et magni temporibus officia! Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Accusamus debitis, nulla beatae ad inventore
-                    illum temporibus odio asperiores laudantium voluptates tenetur earum numquam nobis vitae impedit
-                    voluptatum ducimus, libero at.</p>
+                <div class="row">
+                    <div class="col-md-12">
+                        <img id="about-logo" src="../styles/images/lung-icon-excited.png" alt="logo">
+                    </div>
+                    <div class="col-md-12">
+                        <h3 class="py-2">What I've been building</h3>
+                    </div>
+                    <div class="col-md-12">
+                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut
+                            ineligendi, sitat nam vel itaque omnis animi doloribus reiciendis fugit modi et magni
+                            temporibus officia! Loremipsum dolor sit amet consectetur adipisicing elit. Accusamus
+                            debitis, nulla beatae ad inventoreillum temporibus odio asperiores laudantium voluptates
+                            tenetur earum numquam nobis vitae impeditvoluptatum ducimus, libero at.</span>
+                    </div>
+                </div>
+
             </div>
             <div class="col-md-2"></div>
         </div>
     </div>
-    <div class="breaker">
+    <div class="breaker color-blue-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 my-5">
@@ -71,22 +81,34 @@
         </div>
     </div>
     <!-- Project 1 -->
-    <div class="container mt-5 color-pink">
+    <div class="container color-pink">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Blobber Royal</h2>
+                <h2 class="mt-4 mb-4">Blobber Royal</h2>
+            </div>
+            <div class="col-md-12">
                 <img id="blobber-royal-img" class="work-page-img" src="../styles/images/blobber-royal-img.jpg"
                     alt="Image of Blobber Royal">
+            </div>
+            <div class="col-md-12">
                 <div class="text-center mt-3">
-                    <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button id="blobber-readme" class="px-2 mx-3 read-more">Read More</button></a>
-                    <a href="https://github.com/yomyyo/yelling-game"><button class="px-2 mx-3">Source</button></i></a>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="#"><button id="blobber-readme" class="px-2 mx-3 read-more">Read More</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/yomyyo/yelling-game"><button
+                                    class="px-2 mx-3">Source</button></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
-    <div class="breaker">
+    <div class="breaker color-pink">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 my-5">
@@ -95,24 +117,36 @@
             </div>
         </div>
     </div>
-     <!-- Project 2 -->
-    <div class="container mt-5 color-blue-dark">
+    <!-- Project 2 -->
+    <div class="container color-blue-dark">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Food for Thought</h2>
+                <h2 class="mt-4 mb-4">Food for Thought</h2>
+            </div>
+            <div class="col-md-12">
                 <img id="fft-img" class="work-page-img" src="../styles/images/fft-img.png"
                     alt="Image of Food for Thought">
+            </div>
+            <div class="col-md-12">
                 <div class="text-center mt-3">
-                    <a href="https://hunterwiegand.github.io/Food-for-Thought/"><button
-                            class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button id="fft-readme" class="px-2 mx-3 read-more">Read More</button></a>
-                    <a href="https://github.com/hunterwiegand/Food-for-Thought"><button
-                            class="px-2 mx-3">Source</button></i></a>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://hunterwiegand.github.io/Food-for-Thought/"><button
+                                    class="px-2 mx-3">Demo</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="#"><button id="fft-readme" class="px-2 mx-3 read-more">Read More</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/hunterwiegand/Food-for-Thought"><button
+                                    class="px-2 mx-3">Source</button></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="breaker">
+    <div class="breaker color-blue-dark">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 my-5">
@@ -121,23 +155,37 @@
             </div>
         </div>
     </div>
-     <!-- Project 3 -->
-    <div class="container mt-5 color-red">
+    <!-- Project 3 -->
+    <div class="container color-red">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Mystic Spells</h2>
+                <h2 class="mt-4 mb-4">Mystic Spells</h2>
+            </div>
+            <div class="col-md-12">
                 <img id="mystic-spell-img" class="work-page-img" src="../styles/images/mystic-spell-img.png"
-                    alt="Image of Blobber Royal">
+                    alt="Image of Hangman Game">
+            </div>
+            <div class="col-md-12">
                 <div class="text-center mt-3">
-                    <a href="https://hunterwiegand.github.io/Psychic-Game/"><button class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button id="mystic-spells-readme" class="px-2 mx-3 read-more">Read More</button></a>
-                    <a href="https://github.com/hunterwiegand/Psychic-Game"><button
-                            class="px-2 mx-3">Source</button></i></a>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://hunterwiegand.github.io/Psychic-Game/"><button
+                                    class="px-2 mx-3">Demo</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="#"><button id="mystic-spells-readme" class="px-2 mx-3 read-more">Read
+                                    More</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/hunterwiegand/Psychic-Game"><button
+                                    class="px-2 mx-3">Source</button></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="breaker">
+    <div class="breaker color-red">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 my-5">
@@ -146,22 +194,34 @@
             </div>
         </div>
     </div>
-     <!-- Project 4 -->
-    <div class="container mt-5 color-blue-light">
+    <!-- Project 4 -->
+    <div class="container color-blue-light">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Node Siri</h2>
+                <h2 class="mt-4 mb-4">Node Siri</h2>
+            </div>
+            <div class="col-md-12">
                 <img id="node-siri-img" class="work-page-img" src="../styles/images/node-siri-img.gif"
                     alt="Image of Blobber Royal">
+            </div>
+            <div class="col-md-12">
                 <div class="text-center mt-3">
-                    <a href="#"><button id="node-siri-readme" class="px-2 mx-3 read-more">Read More</button></a>
-                    <a href="https://github.com/hunterwiegand/liri-node-app"><button
-                            class="px-2 mx-3">Source</button></i></a>
+                    <div class="row">
+                        <div class="col-sm-3"></div>
+                        <div class="col-sm-3">
+                            <a href="#"><button id="node-siri-readme" class="px-2 mx-3 read-more">Read More</button></a>
+                        </div>
+                        <div class="col-sm-3">
+                            <a href="https://github.com/hunterwiegand/liri-node-app"><button
+                                    class="px-2 mx-3">Source</button></i></a>
+                        </div>
+                        <div class="col-sm-3"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="breaker">
+    <div class="breaker color-blue-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 my-5">
@@ -170,18 +230,40 @@
             </div>
         </div>
     </div>
-     <!-- Project 5 -->
-    <div class="container mt-5 color-tan">
+    <!-- Project 5 -->
+    <div class="container color-tan">
         <div class="row text-center">
             <div class="col-md-12">
-                <h2>Gif generator</h2>
+                <h2 class="mt-4 mb-4">Gif Generator</h2>
+            </div>
+            <div class="col-md-12">
                 <img id="giffy-img" class="work-page-img" src="../styles/images/giffy-img.png"
                     alt="Image of Food for Thought">
+            </div>
+            <div class="col-md-12">
                 <div class="text-center mt-3">
-                    <a href="https://hunterwiegand.github.io/Giphy-App/"><button class="px-2 mx-3">Demo</button></a>
-                    <a href="#"><button id="giffy-readme" class="px-2 mx-3 read-more">Read More</button></a>
-                    <a href="https://github.com/hunterwiegand/Giphy-App"><button
-                            class="px-2 mx-3">Source</button></i></a>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://hunterwiegand.github.io/Giphy-App/"><button
+                                    class="px-2 mx-3">Demo</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="#"><button id="giffy-readme" class="px-2 mx-3 read-more">Read More</button></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/hunterwiegand/Giphy-App"><button
+                                    class="px-2 mx-3">Source</button></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="breaker color-tan">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 my-4">
+                    <!-- <div class="line text-center">. . .</div> -->
                 </div>
             </div>
         </div>
@@ -189,8 +271,6 @@
 
 
 
-
-   
 
 
 
