--- a/styles/style.css
+++ b/styles/style.css
@@ -45,16 +45,19 @@ body {
 }
 
 .readme {
-    color: #005f81;
-    /* height: 100vw;
-    width: 100vw; */
-    /*   */
-    background-color: #ff6fa9;
-    /* display: none; */
+    position: fixed;
+    z-index: 1;
+    top: 2em;
+    bottom: 2em;
+    left: 2em;
+    right: 2em;
+    background: #ffffff;
+    box-shadow: 0px 0px 0px 3em rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
 }
 
-.close-button {
-    
+.close-button:hover {
+   cursor: pointer; 
 }
 
 @media (min-width: 576px) {
