--- a/views/work.html
+++ b/views/work.html
@@ -13,6 +13,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom CSS-->
     <link rel="stylesheet" href="../styles/style.css">
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
         <nav class="navbar navbar-expand px-5 pb-5 pt-2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img id="logo" src="../styles/images/lung-icon-excited.png"
+                    <a class="nav-link" href="../index.html"><img id="logo" src="../styles/images/lung-icon-excited.png"
                             alt="logo"></a>
                 </li>
             </ul>
@@ -270,9 +272,34 @@
     </div>
 
 
+<!-- 
 
+    <div class="w3-container">
+            <h2>W3.CSS Modal</h2>
+            <p>In this example we demonstrate how to close the modal by clicking outside of the modal box.</p>
+          
+            <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
 
-
+            <button id="testing-btn" class="">TEST</button>
+          
+            <div id="id01" class="w3-modal">
+              <div class="w3-modal-content w3-card-4">
+                <header class="w3-container w3-teal"> 
+                  <span onclick="document.getElementById('test').style.display='none'" 
+                  class="w3-button w3-display-topright">&times;</span>
+                  <h2>Modal Header</h2>
+                </header>
+                <div class="w3-container">
+                  <p>You have two options to close this modal:</p>
+                  <p>Click on the "x" or click anywhere outside of the modal!</p>
+                </div>
+                <footer class="w3-container w3-teal">
+                  <p>Modal Footer</p>
+                </footer>
+              </div>
+            </div>
+          </div> -->
+          
 
 
 
