Fixed layout in home page and added function to add new tab when clicking a link

--- a/views/work.html
+++ b/views/work.html
@@ -96,14 +96,13 @@
                 <div class="text-center mt-3">
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://blobber-royale.herokuapp.com/"><button class="px-2 mx-3">Demo</button></a>
+                            <a href="https://blobber-royale.herokuapp.com/" target="_blank"><button class="px-2 mx-3">Demo</button></a>
                         </div>
                         <div class="col-sm-4">
                             <a href="#"><button id="blobber-readme" class="px-2 mx-3 read-more">Read More</button></a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/yomyyo/yelling-game"><button
-                                    class="px-2 mx-3">Source</button></i></a>
+                            <a href="https://github.com/yomyyo/yelling-game" target="_blank"><button class="px-2 mx-3">Source</button></i></a>
                         </div>
                     </div>
                 </div>
@@ -133,15 +132,13 @@
                 <div class="text-center mt-3">
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://hunterwiegand.github.io/Food-for-Thought/"><button
-                                    class="px-2 mx-3">Demo</button></a>
+                            <a href="https://hunterwiegand.github.io/Food-for-Thought/" target="_blank"><button class="px-2 mx-3">Demo</button></a>
                         </div>
                         <div class="col-sm-4">
                             <a href="#"><button id="fft-readme" class="px-2 mx-3 read-more">Read More</button></a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/hunterwiegand/Food-for-Thought"><button
-                                    class="px-2 mx-3">Source</button></i></a>
+                            <a href="https://github.com/hunterwiegand/Food-for-Thought " target="_blank"><button class="px-2 mx-3">Source</button></i></a>
                         </div>
                     </div>
                 </div>
@@ -171,15 +168,13 @@
                 <div class="text-center mt-3">
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://hunterwiegand.github.io/Psychic-Game/"><button
-                                    class="px-2 mx-3">Demo</button></a>
+                            <a href="https://hunterwiegand.github.io/Psychic-Game/" target="_blank"><button class="px-2 mx-3">Demo</button></a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="#"><button id="mystic-spells-readme" class="px-2 mx-3 read-more">Read
-                                    More</button></a>
+                            <a href="#"><button id="mystic-spells-readme" class="px-2 mx-3 read-more">Read More</button></a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/hunterwiegand/Psychic-Game"><button
+                            <a href="https://github.com/hunterwiegand/Psychic-Game" target="_blank"><button
                                     class="px-2 mx-3">Source</button></i></a>
                         </div>
                     </div>
@@ -214,7 +209,7 @@
                             <a href="#"><button id="node-siri-readme" class="px-2 mx-3 read-more">Read More</button></a>
                         </div>
                         <div class="col-sm-3">
-                            <a href="https://github.com/hunterwiegand/liri-node-app"><button
+                            <a href="https://github.com/hunterwiegand/liri-node-app" target="_blank"><button
                                     class="px-2 mx-3">Source</button></i></a>
                         </div>
                         <div class="col-sm-3"></div>
@@ -246,14 +241,14 @@
                 <div class="text-center mt-3">
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://hunterwiegand.github.io/Giphy-App/"><button
+                            <a href="https://hunterwiegand.github.io/Giphy-App/" target="_blank"><button
                                     class="px-2 mx-3">Demo</button></a>
                         </div>
                         <div class="col-sm-4">
                             <a href="#"><button id="giffy-readme" class="px-2 mx-3 read-more">Read More</button></a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/hunterwiegand/Giphy-App"><button
+                            <a href="https://github.com/hunterwiegand/Giphy-App" target="_blank"><button
                                     class="px-2 mx-3">Source</button></i></a>
                         </div>
                     </div>
@@ -265,57 +260,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 my-4">
-                    <!-- <div class="line text-center">. . .</div> -->
                 </div>
             </div>
         </div>
     </div>
-
-
-<!-- 
-
-    <div class="w3-container">
-            <h2>W3.CSS Modal</h2>
-            <p>In this example we demonstrate how to close the modal by clicking outside of the modal box.</p>
-          
-            <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
-
-            <button id="testing-btn" class="">TEST</button>
-          
-            <div id="id01" class="w3-modal">
-              <div class="w3-modal-content w3-card-4">
-                <header class="w3-container w3-teal"> 
-                  <span onclick="document.getElementById('test').style.display='none'" 
-                  class="w3-button w3-display-topright">&times;</span>
-                  <h2>Modal Header</h2>
-                </header>
-                <div class="w3-container">
-                  <p>You have two options to close this modal:</p>
-                  <p>Click on the "x" or click anywhere outside of the modal!</p>
-                </div>
-                <footer class="w3-container w3-teal">
-                  <p>Modal Footer</p>
-                </footer>
-              </div>
-            </div>
-          </div> -->
-          
-
-
-
-
-
-
     <footer class="page-footer font-small cyan darken-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 pt-5">
                     <div class="text-center">
                         <!--Linkedin -->
-                        <a href="https://www.linkedin.com/in/hunter-wiegand-934ab8162/"><i class="fab fa-linkedin px-2">
+                        <a href="https://www.linkedin.com/in/hunter-wiegand-934ab8162/" target="_blank"><i class="fab fa-linkedin px-2">
                             </i></a>
                         <!--Github-->
-                        <a href="https://github.com/hunterwiegand"><i class="fab fa-github px-2"></i></a>
+                        <a href="https://github.com/hunterwiegand" target="_blank"><i class="fab fa-github px-2"></i></a>
                         <!--Email-->
                         <a href="contact.html"><i class="fas fa-envelope px-2"></i></a>
                     </div>
